--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">MediaPlayerDemo</string>
+
+    <string-array name="title_home_tabs">
+        <item>首页</item>
+        <item>消息</item>
+        <item>联系人</item>
+        <item>更多</item>
+    </string-array>
 </resources>
